# cpj

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cpj/: CMakeLists.module.txt  CMakeLists.txt  config.json  kinds.h  parser.cpp  parser.h  script.cpj  source.cpp
src/: CMakeLists.txt  main.cpp
src/interpreter/: CMakeLists.txt
src/interpreter/include/interpreter/: builtin.h  interpreter.h  language.h
src/interpreter/src/: builtin.cpp  interpreter.cpp  language.cpp
src/parser/: CMakeLists.txt
src/parser/include/parser/: action.h  expression.h  for.h  if.h  is.h  kinds.h  reference.h  root.h  string.h  variable.h
src/parser/src/: action.cpp  expression.cpp  for.cpp  if.cpp  is.cpp  reference.cpp  root.cpp  string.cpp  variable.cpp
